--- a/lil_link/templates/index.html
+++ b/lil_link/templates/index.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
     <h2>Create a new LilLink</h2>
-    <form>
+    <form method="post" action="{{ url_for('generate_url') }}">
     <div class="form-group">
         <label for="url">URL:</label>
-        <input type="url" class="form-control" id="url">
+        <input type="url" class="form-control" name="url">
     </div>
         <button type="submit" class="btn btn-default">Shorten URL</button>
     </form>
