--- a/lil_link/templates/index.html
+++ b/lil_link/templates/index.html
@@ -9,4 +9,5 @@
         <button type="submit" class="btn btn-default">Shorten URL</button>
     </form>
     <!-- /.row -->
+    {% block output_result %}{% endblock %}
 {% endblock %}
