--- a/lil_link/templates/index.html
+++ b/lil_link/templates/index.html
@@ -9,5 +9,14 @@
         <button type="submit" class="btn btn-default">Shorten URL</button>
     </form>
     <!-- /.row -->
-    {% block output_result %}{% endblock %}
+    {% with messages = get_flashed_messages(with_categories=True) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="panel panel-info">
+                    <div class="panel-heading">{{ category }}</div>
+                    <div class="panel-body">{{ message }}</div>
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 {% endblock %}
