Fixed Critical Key Error

--- a/lil_link/templates/index.html
+++ b/lil_link/templates/index.html
@@ -8,7 +8,7 @@
     </div>
         <button type="submit" class="btn btn-default">Shorten URL</button>
     </form>
-    <!-- /.row -->
+    <div class = "row"></div>
     {% with messages = get_flashed_messages(with_categories=True) %}
         {% if messages %}
             {% for category, message in messages %}
