First Refactoring of Python Module

--- a/lil_link/templates/base.html
+++ b/lil_link/templates/base.html
@@ -60,6 +60,13 @@
 
         {% block content %}{% endblock %}
 
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <hr>
+                <p>This page is powered by: Bootstrap v3.3.7, jQuery v1.11.1</p>
+            </div>
+        </div>
+
     </div>
     <!-- /.container -->
 
