Refactored and Upgraded Version

--- a/lil_link/templates/error_page.html
+++ b/lil_link/templates/error_page.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="row">
-            <div class="col-lg-12 text-center">
-                <h1>An error has occurred!</h1>
-                <p class="lead">{{ error_message }}</p>
-            </div>
-        </div>
-        <!-- /.row -->
+    <section class="header">
+        <h3 class="title"><h3>{{ error_number }} Error - {{ http_error_description }}</h3></h3>
+    </section>
+
+    <p>{{ error_message }}</p>
+
+    <p style="text-align: center">
+    <a href="{{ url_for('index') }}">Return to Main Page</a>
+    </p>
+
+
 {% endblock %}
