--- a/lil_link/templates/base.html
+++ b/lil_link/templates/base.html
@@ -1,81 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
+<!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
     {% if title %}
         <title>{{ page_title }} - LilLink</title>
     {% else %}
         <title>LilLink</title>
     {% endif %}
+    <meta name="description" content="A demonstration URL shortener powered by Flask and Redis">
+    <meta name="author" content="Aaron Gaba">
 
-    <!-- Bootstrap Core CSS -->
-    <link href="../static/startbootstrap-bare-gh-pages/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Mobile Specific Metas
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Custom CSS -->
-    <style>
-    body {
-        padding-top: 70px;
-        /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    }
-    </style>
+    <!-- FONT
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href='//fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!-- CSS
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" href="../static/css/normalize.css">
+    <link rel="stylesheet" href="../static/css/skeleton.css">
+    <link rel="stylesheet" href="../static/css/custom.css">
 
 </head>
-
 <body>
+<div class="container">
+    <section class="header">
+        <h2 class="title">LilLink</h2>
+    </section>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{{ url_for('index') }}">LilLink</a>
-            </div>
-        </div>
-        <!-- /.container -->
-    </nav>
+    <hr>
 
-    <!-- Page Content -->
-    <div class="container">
+    {% block content %} {% endblock %}
 
 
-        {% block content %}{% endblock %}
-
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <hr>
-                <p>This page is powered by: Bootstrap v3.3.7, jQuery v1.11.1</p>
-            </div>
-        </div>
-
-    </div>
-    <!-- /.container -->
-
-    <!-- jQuery Version 1.11.1 -->
-    <script src="../static/startbootstrap-bare-gh-pages/js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../static/startbootstrap-bare-gh-pages/js/bootstrap.min.js"></script>
+</div>
 
 </body>
-
 </html>
